--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Everyone should Code!
 
 <li><A href='ifelse.html'>Conditionals</A></li>
 
-<li><A href='Loops.html'>Loops</A></li>
+<li><A href='loops.html'>Loops</A></li>
 
 <li><A href='arrays.html'>Lists</A></li>
 
