--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Learn Phyton Basics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="3ctOoLuIkGjbzDRQ04bQnjbju0xmO5C7ivGLx8vfCFE" />
 <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
