--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Learn Phyton Basics</title>
+<title>Learn Phyton ASAP</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="3ctOoLuIkGjbzDRQ04bQnjbju0xmO5C7ivGLx8vfCFE" />
 <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
