--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ Everyone should Code!
 
 <li onclick='basics()'><i class="far fa-file"></i>&nbsp Some Basics</li>
 <li id="basics">The following bits of pieces and commands would be useful in the upcoming tutorials: 
+	<br><br>
+	In Python 2.7, print statements <b>don't require a paranthesis<b>, while Python later than 2.7 require parenthesis in print. Keep this in mind.<br>This tutorial is based on Python 2.7.
 <br>
 <Br>
 &nbsp&nbsp&nbsp&nbsp <b>Hit Enter</b> after every line of code to execute it.
