--- a/index.html
+++ b/index.html
@@ -256,46 +256,7 @@ Everyone should Code!
 
 
 
-<script type="text/javascript">
-
-    var x=document.getElementById("intro");
-    var y=document.getElementById("open");
-    if(x.style.display!="block"){
-        y.innerHTML="<i class='fas fa-plus'></i>";
-    }
-	var intro=function(){
-		if(x.style.display!="block"){
-         x.style.display="block";
-         y.innerHTML="<i class='fas fa-minus'></i>";
-		}
-		else{
-			x.style.display="none";
-			y.innerHTML="<i class='fas fa-plus'></i>";
-		}
-	};
-	var close=function(){
-		x.style.display="none";
-	}
-	z=document.getElementById("get");
-
-	var get=function(){
-      if(z.style.display!="block"){
-         z.style.display="block";
-		}
-		else{
-		 z.style.display="none";
-		}
-	};
-	var a=document.getElementById("basics");
-	var basics=function(){
-      if(a.style.display!="block"){
-         a.style.display="block";
-		}
-		else{
-		 a.style.display="none";
-		}
-	};
-</script>
+<script type="text/javascript" src="./scripts/indexscripts.js"></script>
 
 </body>
 </html>
