--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@ font-weight: bold;
 <div align="center">
 <div id="top">
 Everyone should Code!
-<br>
-<br>
+<br/>
+<br/>
 <i class="fab fa-python fa-3x"></i>
-<br>
-<Br>
+<br/>
+<br/>
 <div id="button"><a href="#next">Learn Python</a></div>
-<Br>
-<BR>
+<br/>
+<br/>
 </div>
 </div>
 <div id="next">
@@ -202,55 +202,55 @@ Everyone should Code!
 <li onclick="intro()"><span id="open"></span>&nbsp&nbsp<a href='javascript:void(0)'>What is Python | and | Why learn it?</a></li>
 
 <li id="intro">Python is an extremely helpful, extremely useful and the most simple to learn programming language. So much so, that it actually has been winning awards for being the best programming language in the world.
-	<Br>
-	<br>
+	<br/>
+	<br/>
 &nbsp&nbsp&nbsp&nbsp It is a clean, effortless and semicolon-free programming language! Object-Oriented (Doesn't matter if you don't know wat this means. No One actually does!)
-<Br>
-<BR>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp You won't learn to make games or any world changing stuff using this website; but one thing you will have is a great foundation for further learning Python once you finish. Enjoy learning!
-<Br>
-<bR>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp <b>Note : </b>A computer is needed in order to program, but this tutorial can be viewed from any device, anywhere.
-<BR>
-<BR>
+<br/>
+<br/>
 <div align="center"><div id="closer" onclick="intro()"><a href='javascript:void(0)'><i class="fas fa-minus"></i> &nbspClose</a></div></div></li>
 
 <li onclick="get()"><a href='javascript:void(0)'><i class="fab fa-python"></i> &nbspGet Python</a></li>
 
 <li id="get">In the turoials, we would be using the <b>IDLE IDE</b> that comes built in the package linked down below!
-	<Br>
-	<br>
+	<br/>
+	<br/>
 &nbsp&nbsp&nbsp&nbsp Go to <b><a target='_blank' style="color: #15aabf;" href='http://python.org/'>this site</a></b>, select your computer's specs, and download the installer. Once that is done. Install the package. In your start menu (Finder if you are using a MAC) , navigate to Python and open IDLE IDE which would be listed there. Congrats, your development environment is set!
-<Br>
-<Br>
+<br/>
+<br/>
 <div align="center"><div id="closer" onclick="get()"><a href='javascript:void(0)'><i class="fas fa-minus"></i> &nbspClose</a></div></div>
 </li>
 
 <li onclick='basics()'><i class="far fa-file"></i>&nbsp <span style='cursor: pointer;'>Some Basics</span></li>
 
 <li id="basics">The following bits of pieces and commands would be useful in the upcoming tutorials: 
-	<br><br>
-	In Python 2.7, <b>print</b> statements <b>don't require a paranthesis</b>, while Python later than 2.7 require parenthesis in print. Keep this in mind.<br>This tutorial is based on Python 2.7.
-<br>
-<Br>
+	<br/><br/>
+	In Python 2.7, <b>print</b> statements <b>don't require a paranthesis</b>, while Python later than 2.7 require parenthesis in print. Keep this in mind.<br/>This tutorial is based on Python 2.7.
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp <b>Hit Enter</b> after every line of code to execute it.
-<br>
-<BR>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp Python Files are saved using the <b>.py</b> extension.
-<Br>
-<BR>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp Type <b>exit()</b> in the IDLE to close Python.
-<Br>
-<BR>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp Comments are created using <b><span style="color: #15aabf;">#</span></b>, they don't execute on run! And are only visible to the people seeing the actual code. In the tutorials, the comments will be used to guide you.
-<br>
-<br>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp In the tutorials, lines that will have <b>>></b> in their beginning will be the code and the ones without them will be the output.
-<BR>
-<br>
+<br/>
+<br/>
 &nbsp&nbsp&nbsp&nbsp Again. This is just a basic tutorial And neither would you learn anything else for free anywhere else on the internet. :P
-<Br>
-<BR>
+<br/>
+<br/>
 <div align="center"><div id="closer" onclick="basics()"><a href='javascript:void(0)'><i class="fas fa-minus"></i> &nbspClose</a></div></div>
 </li>
 
@@ -272,7 +272,7 @@ Everyone should Code!
 </div>
 <footer style="width: 100%;">
 	Created from scratch by <b><a href='http://deve-sh.github.io/website'>Devesh Kumar</a></b>
-	<br><br>
+	<br/><br/>
 	<span style="font-size: 14px;">Inspired by Codehub</span>
 </footer>
 
