--- a/variables.html
+++ b/variables.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Python Variables</title>
+
 <!-- Meta -->
 
 <meta charset="utf-8">
@@ -19,63 +21,64 @@
 <link rel="stylesheet" href="./styles/style.css">
 <link rel="stylesheet" media="screen and (max-width: 750px)" href="./styles/small.css">
 <link rel="stylesheet" media="screen and (max-width: 600px)" href="./styles/ultrasmall.css">
+
 </head>
 
 <body style="background: linear-gradient(#56CCF2,#2F80ED)">
-	<br><Br>
-	<div align="center" style="font-family: Gotham; color: #ffffff;"><span id="head">Variables</span><br><br>
-		<div id="line" style="background: #ffffff;"></div><br></div>
+	<br/><br/>
+	<div align="center" style="font-family: Gotham; color: #ffffff;"><span id="head">Variables</span><br/><br/>
+		<div id="line" style="background: #ffffff;"></div><br/></div>
 		<div align="center"><div id="card">
-		<br>
+		<br/>
 		In Python, data is stored in the form of variables. 
-		<br>
+		<br/>
 		Variables are data with or without a value whose values can be changed during the run of a program.
-		<Br><br>
-		For Ex :<br>
+		<br/><br/>
+		For Ex :<br/>
 		</div>
 		<div id="code">
 			>> <span class="one">x</span> = 5
 		</div>
 		<div id="card">
 		Here, <b>x</b> is a variable.
-		<Br>
-		<br>
+		<br/>
+		<br/>
 		There are a few types of variables that can be used in a Python program. Most notably : 
-		<Br>
-		<br>
+		<br/>
+		<br/>
 		<ul>
 			<li><b>Integer</b> - These variables store numerical values without a decimal point.</li>
-			<br>
-			<br>
+			<br/>
+			<br/>
 			<li><b>Float</b> - These variables store numerical values with a decimal point.</li>
-			<br>
-			<br>
+			<br/>
+			<br/>
 			<li><b>Strings</b> - These variables store text values, are declared inside <b>"..."</b>.</li>
 		</ul>
-		<br>
+		<br/>
 		In Python, unlike other programming languages (Skip this if you don't know any other programming language!), you don't have to define which type of data is being stored in a variable.
-		<br>
-		<br>
+		<br/>
+		<br/>
 		<h2 style="color: #999999;">Defining / Declaring a variable</h2>
 
 		A sample definition of the different types of variables :
 		</div>
 		<div id="code">
-		>> <span class="one">x </span>= 5 &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is an integer type variable!</span><br><Br>
-		>> <span class="one">y </span>= 5.1 &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is a floating type variable!</span><br><Br>
-		>> <span class="one">z </span>= "Hey There!" &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is a string!</span><br>
+		>> <span class="one">x </span>= 5 &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is an integer type variable!</span><br/><br/>
+		>> <span class="one">y </span>= 5.1 &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is a floating type variable!</span><br/><br/>
+		>> <span class="one">z </span>= "Hey There!" &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is a string!</span><br/>
 		</div>
 		<div id="card">
-			<br><b><u>Note</u></b> : The values of a variable <b><u>CAN</u> be changed</b> during the program. <b>This is the most fundamental concept of programming.</b>
+			<br/><b><u>Note</u></b> : The values of a variable <b><u>CAN</u> be changed</b> during the program. <b>This is the most fundamental concept of programming.</b>
 		</div>
 		<div id="code">
-		>> <span class="one">x</span> = 7<br><Br>
-		>> <span class="one">x</span> = <span class="one">x</span> + 1 <BR><BR>
-		>> <span class="print">print</span> <span class="one">x</span><br><BR>
+		>> <span class="one">x</span> = 7<br/><br/>
+		>> <span class="one">x</span> = <span class="one">x</span> + 1 <br/><br/>
+		>> <span class="print">print</span> <span class="one">x</span><br/><br/>
 		8
-		<br><br>
-		>> <span class="one">x</span>-= 1 &nbsp&nbsp&nbsp <span class="comment"># Same as x=x-1<Br><Br></span>
-		>> <span class="print">print</span> <span class="one">x</span><br><BR>
+		<br/><br/>
+		>> <span class="one">x</span>-= 1 &nbsp&nbsp&nbsp <span class="comment"># Same as x=x-1<br/><br/></span>
+		>> <span class="print">print</span> <span class="one">x</span><br/><br/>
 		7
 		</div>
 		<div id="card">
