--- a/loops.html
+++ b/loops.html
@@ -1,13 +1,26 @@
 <html>
 <head>
 <title>Python Loops</title>
+
+<!-- Meta -->
+
+<meta charset="utf-8">
+<meta author="Devesh Kumar">
+<meta description="A website to help people learn the basics of Python ASAP">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Files -->
+
 <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" media="screen and (max-width: 750px)" href="small.css">
-<link rel="stylesheet" media="screen and (max-width: 600px)" href="ultrasmall.css">
+
+<!-- Styles -->
+
+<link rel="stylesheet" href="./styles/style.css">
+<link rel="stylesheet" media="screen and (max-width: 750px)" href="./styles/small.css">
+<link rel="stylesheet" media="screen and (max-width: 600px)" href="./styles/ultrasmall.css">
+
 </head>
 <body style="background: #195a72;">
 	<br><Br>
