--- a/variables.html
+++ b/variables.html
@@ -37,7 +37,7 @@
 		For Ex :<br/>
 		</div>
 		<div id="code">
-			>> <span class="one">x</span> = 5
+			>> <span class="one">x</span> <span class='equals'>=</span> <span class='number'>5</span>
 		</div>
 		<div id="card">
 		Here, <b>x</b> is a variable.
@@ -49,9 +49,7 @@
 		<ul>
 			<li><b>Integer</b> - These variables store numerical values without a decimal point.</li>
 			<br/>
-			<br/>
 			<li><b>Float</b> - These variables store numerical values with a decimal point.</li>
-			<br/>
 			<br/>
 			<li><b>Strings</b> - These variables store text values, are declared inside <b>"..."</b>.</li>
 		</ul>
@@ -64,23 +62,27 @@
 		A sample definition of the different types of variables :
 		</div>
 		<div id="code">
-		>> <span class="one">x </span>= 5 &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is an integer type variable!</span><br/><br/>
-		>> <span class="one">y </span>= 5.1 &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is a floating type variable!</span><br/><br/>
-		>> <span class="one">z </span>= "Hey There!" &nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#This is a string!</span><br/>
+			>> <span class="one">x</span> <span class='equals'>=</span> <span class='number'>5</span> &nbsp&nbsp&nbsp&nbsp&nbsp<span class='comment'>#This is an integer type variable!</span><br/><br/>
+			>> <span class="one">y</span> <span class='equals'>=</span> <span class='number'>5.1</span> &nbsp&nbsp&nbsp&nbsp&nbsp<span class='comment'>#This is a floating type variable!</span>
+			<br/>
+			<br/>
+			>> <span class="one">z</span> <span class='equals'>=</span> <span class='quotes'>"</span><span class='string'>Hey There!</span><span class='quotes'>"</span> &nbsp&nbsp&nbsp&nbsp&nbsp<span class='comment'># This is a string!</span><br/>
 		</div>
+		
 		<div id="card">
 			<br/><b><u>Note</u></b> : The values of a variable <b><u>CAN</u> be changed</b> during the program. <b>This is the most fundamental concept of programming.</b>
 		</div>
+		
 		<div id="code">
-		>> <span class="one">x</span> = 7<br/><br/>
-		>> <span class="one">x</span> = <span class="one">x</span> + 1 <br/><br/>
-		>> <span class="print">print</span> <span class="one">x</span><br/><br/>
-		8
-		<br/><br/>
-		>> <span class="one">x</span>-= 1 &nbsp&nbsp&nbsp <span class="comment"># Same as x=x-1<br/><br/></span>
-		>> <span class="print">print</span> <span class="one">x</span><br/><br/>
-		7
-		</div>
+			>> <span class="one">x</span> <span class='equals'>=</span> <span class='number'>7</span><br/><br/>
+			>> <span class="one">x</span> <span class='equals'>=</span> <span class="one">x</span> <span class='equals'>+</span> <span class='number'>1</span> <br/><br/>
+			>> <span class="print">print</span> <span class="one">x</span><br/><br/>
+			8
+			<br/><br/>
+			>> <span class="one">x</span><span class='equals'> -=</span> <span class='number'>1</span> &nbsp&nbsp&nbsp <span class="comment"># Same as x=x-1<br/><br/></span>
+			>> <span class="print">print</span> <span class="one">x</span><br/><br/>
+			7
+			</div>
 		<div id="card">
 		As you can see in this example, the value of x has been increased by one, and that is the further default value of x from that point, and then it was decreased by one. That is it for the variables in Python.
 		</div>
