--- a/op.html
+++ b/op.html
@@ -35,7 +35,7 @@
 		For Ex :<br/>
 		</div>
 		<div id="code">
-			>> <span class="one">z</span> = <span class="one">x</span> + <span class="one">y</span> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#The equals sign is an operator that is working on three vars.</span> 
+			>> <span class="one">z</span> <span class='equals'>=</span> <span class="one">x</span> <span class='operator'>+</span> <span class="one">y</span> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#The equals sign is an operator that is working on three vars.</span> 
 		</div>
 		<div id="card">
 		Here, <b>z</b> has a value that is equal to the sum of x and y. The + is an operator, similarly the = is also an operator.
@@ -43,9 +43,9 @@
 		More examples are :
 		</div>
 		<div id="code">
-		>> <span class="one">z </span>= 7/8  <span class="comment"># / is the division operator.
+		>> <span class="one">z </span><span class='equals'>=</span> <span class='number'>7</span> <span class='operator'>/</span> <span class='number'>8</span>  <span class="comment"># / is the division operator.</span>
 		  <br/><br/>
-		>> <span class="one">y </span>= 9*8 <span class="comment"> # * is the multiplication operator.
+		>> <span class="one">y </span><span class='equals'>=</span> <span class='number'>9</span> <span class='operator'>*</span> <span class='number'>8</span> <span class="comment"> # * is the multiplication operator.</span>
 		</div>
 		<div id="card">
 		The above are called <b>mathematical operators.</b>
@@ -55,11 +55,28 @@
 		<ul>
 			<li><b>Mathematical</b> - Used to perform mathematical tasks.I.E: + , - , * , / </li>
 			<br/>
+			<li><b>Assignment</b> - These are used to assign particular values to a set of variables. I.E = (equals) , += , -= , *=, /= .</li>
 			<br/>
-			<li><b>Assignment</b> - These are used to assign particular values to a set of variables.I.E = (equals), != (Not eual to) etc.</li>
-			<br/>
-			<br/>
-			<li><b>Logical</b> - It would be better to learn them by practical application, next topic covers them. In all they work to give meaning to a statement or check whether a statement is true or not, or just comparing the values of two variables. They include <b>== (If equal), != (If not equal), > (Greater Than), < (Less Than) </b></li>
+			<li><b>Logical</b> - It would be better to learn them by practical application, next topic covers them. In all they work to give meaning to a statement or check whether a statement is true or not, or just comparing the values of two variables. They include :
+				<ul>
+					<li>
+						== (If equal)
+					</li>
+					<li> != (If not equal)
+					</li> 
+					<li> > (Greater Than) </li>
+					<li>
+						< (Less Than)
+					</li> 
+					<li>
+						>= (Greater than or equal to)
+					</li>
+					<li>
+						<= (Less than or equal to)
+					</li>
+				</ul>
+			</li>
+			<br>
 			<li><b>Remainder (%)</b> - This tells what the remainder is when a number is divided by another number. I.e. 5%2=1 and 4%2=0, if the remainder is 0, the number is divisible by the other number. </li>
 		</ul>
 		<br/>
